Jumpy popup slideshow height fix

--- a/css/stylesheet-responsive.css
+++ b/css/stylesheet-responsive.css
@@ -136,6 +136,12 @@
     background-color: transparent;
     box-shadow: none;
   }  
+  
+  #slideshow-block .carousel .item > img {
+    height: 350px;
+    max-height: 350px;
+    width: auto;
+  }
 
 }
 
